tests/baselines/reference/objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat(strict=true).errors.txt
objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts(7,5): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts(8,1): error TS2322: Type 'Object' is not assignable to type 'I'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Type 'Object' provides no match for the signature 'new (): any'.
objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts(13,5): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts(14,1): error TS2322: Type 'Object' is not assignable to type 'new () => any'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Type 'Object' provides no match for the signature 'new (): any'.


==== objectTypeWithConstructSignatureHidingMembersOfFunctionAssignmentCompat.ts (4 errors) ====
    interface I {
        new(): any;
    }
    
    var i: I;
    var f: Object;
    f = i;
        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i = f;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'I'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Type 'Object' provides no match for the signature 'new (): any'.
    
    var a: {
        new(): any
    }
    f = a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a = f;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'new () => any'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Type 'Object' provides no match for the signature 'new (): any'.